<resources>
    <string name="app_name">Android Learning</string>
    <string name="android_hello">Android你好</string>
    <string name="marquee">用于测试跑马灯效果的文本文字，
        为了效果明显内容长度长一些
    </string>
    <string name="btn_text1">Button</string>
    <string name="btn_click">点击按钮</string>
    <string name="hint_text">请输入</string>
    <string name="username_input_hint">请输入用户名：</string>
    <string name="password">请输入密码：</string>
    <string name="login">登陆</string>
    <string name="progress_bar">显示/隐藏进度条</string>
    <string name="progress_bar_horizontal">开始计时</string>
    <string name="notification_layout_title">演示Notification</string>
    <string name="send_notification">发出通知</string>
    <string name="cancel_notification">取消通知</string>
    <string name="toolbar_title">My Toolbar</string>
    <string name="toolbar_subtitle">Testing the subtitle of toolbar</string>
    <string name="dialog_button">显示对话框</string>
    <string name="popup_window">显示PopupWindow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="blank_fragment">Hello blank fragment</string>
    <string name="change">change</string>
    <string name="replace">replace</string>
</resources>