<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:background="@color/gray"
        android:textColor="@color/text"
        android:text="@string/notification_layout_title"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" />

    <Button
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/send_notification"
        android:onClick="sendNotification"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/cancel_notification"
        android:onClick="cancelNotification"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>


</LinearLayout>